alignment fixes

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -99,6 +99,10 @@ h6 {
     border-bottom: 1px solid #e7e7e7;
 }
 
+.content-section-c {
+    max-width: 900px;
+}
+
 .btn-default {
     background-color: transparent;
 
@@ -200,3 +204,6 @@ p.copyright {
     font-weight: normal;
 }
 
+.full-width {
+    width: 100%;
+}
